# start-csr-leptos

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  index.css  index.html  leptosfmt.toml  package.json
src/: lib.rs  main.rs
src/components/: counter_btn.rs
src/pages/: home.rs
